Update intro/wrapup; reorg intro images

--- a/html/Module00_Introduction.html
+++ b/html/Module00_Introduction.html
@@ -14,7 +14,7 @@
 
 <title>Computational Foundations Workshop</title>
 
-<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -30,7 +30,7 @@
        h6 {font-size: 12px;}
        code {color: inherit; background-color: rgba(0, 0, 0, 0.04);}
        pre:not([class]) { background-color: white }</style>
-<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<script src="site_libs/jqueryui-1.13.2/jquery-ui.min.js"></script>
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
@@ -444,8 +444,6 @@ study, apply them in your own work.</p></li>
 <li><p>Please let us know if there is anything we can do to improve the
 workshop experience.</p></li>
 </ul>
-<div id="about-the-workshop-team" class="section level2">
-<h2>About the workshop team</h2>
 <table>
 <colgroup>
 <col width="25%" />
@@ -456,13 +454,12 @@ workshop experience.</p></li>
 <thead>
 <tr class="header">
 <th align="center"><img
-src="images/Module00_headshots/headshot_cgates.jpg" /></th>
+src="images/Module00_Introduction/headshots/headshot_cgates.jpg" /></th>
 <th align="center"><img
-src="images/Module00_headshots/headshot_mbradenb.jpg" /></th>
+src="images/Module00_Introduction/headshots/headshot_mbradenb.jpg" /></th>
 <th align="center"><img
-src="images/Module00_headshots/headshot_rcavalca.jpg" /></th>
-<th align="center"><img
-src="images/Module00_headshots/headshot_trsaari.jpg" /></th>
+src="images/Module00_Introduction/headshots/headshot_rcavalca.jpg" /></th>
+<th align="center"></th>
 </tr>
 </thead>
 <tbody>
@@ -470,42 +467,25 @@ src="images/Module00_headshots/headshot_trsaari.jpg" /></th>
 <td align="center"><strong>Chris</strong></td>
 <td align="center"><strong>Marci</strong></td>
 <td align="center"><strong>Raymond</strong></td>
+<td align="center"></td>
+</tr>
+<tr class="even">
+<td align="center"><img
+src="images/Module00_Introduction/headshots/headshot_trsaari.jpg" /></td>
+<td align="center"><img
+src="images/Module00_Introduction/headshots/headshot_damki.jpg" /></td>
+<td align="center"></td>
+<td align="center"></td>
+</tr>
+<tr class="odd">
 <td align="center"><strong>Travis</strong></td>
-</tr>
-<tr class="even">
-<td align="center"><img
-src="images/Module00_headshots/headshot_daisyfu.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_nlesniak.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_znuzhat.jpg" /></td>
-<td align="center"></td>
-</tr>
-<tr class="odd">
-<td align="center"><strong>Daisy</strong></td>
-<td align="center"><strong>Nick</strong></td>
-<td align="center"><strong>Nuzhat</strong></td>
-<td align="center"></td>
-</tr>
-<tr class="even">
-<td align="center"><img
-src="images/Module00_headshots/headshot_hongss.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_mkdohert.jpg" /></td>
-<td align="center"><img
-src="images/Module00_headshots/headshot_damki.jpg" /></td>
-<td align="center"></td>
-</tr>
-<tr class="odd">
-<td align="center"><strong>Shuangsong</strong></td>
-<td align="center"><strong>Matt</strong></td>
 <td align="center"><strong>Dana</strong></td>
+<td align="center"></td>
 <td align="center"></td>
 </tr>
 </tbody>
 </table>
 <p><br/></p>
-</div>
 </div>
 <div id="code-of-conduct" class="section level1">
 <h1>Code of Conduct</h1>
@@ -542,10 +522,10 @@ class="email">institutional.equity@umich.edu</a>. <br/> <br/></p></li>
 participants following the workshop.</li>
 </ul>
 <div id="section" class="section level2">
-<h2><img src="images/Module00_zoom_logo.png" alt="Zoom" width=120/></h2>
+<h2><img src="images/Module00_Introduction/zoom_logo.png" alt="Zoom" width=120/></h2>
 <ul>
 <li><p>Zoom controls are at the bottom of the Zoom window: <img
-src="images/Module00_zoom_controls.png?s"
+src="images/Module00_Introduction/zoom_controls.png"
 alt="Zoom controls" /></p></li>
 <li><p>To minimize distractions, we encourage participants to keep their
 audio muted (unless actively asking a question).</p></li>
@@ -557,23 +537,17 @@ for now.</p></li>
 <li><p>We will be using Breakout Rooms occasionally for ad-hoc 1-1
 helper support. We will review this in detail together in a few
 minutes.</p></li>
-<li><p>Zoom’s “non-verbal controls” are a useful way to interact</p>
-<ul>
-<li>Depending on your version of Zoom you can access these either
-<ul>
-<li>in the <strong>Reactions</strong> button on you main Zoom
-window</li>
-<li>at the bottom of the <strong>Participant</strong> pane</li>
-</ul></li>
-</ul></li>
+<li><p>Zoom’s “Reactions” are a useful way to interact. You can access
+these from the <strong>React</strong> button.</p></li>
 </ul>
 <div class="float">
-<img src="images/Module00_zoom_nonverbals.png" alt="Zoom non verbals" />
-<div class="figcaption">Zoom non verbals</div>
+<img src="images/Module00_Introduction/zoom_reactions.png"
+alt="Zoom reactions" />
+<div class="figcaption">Zoom reactions</div>
 </div>
 <ul>
 <li><strong>Raise Hand</strong> to request clarification or ask a
-question. (Same an in-person workshop.)</li>
+question. (Same as an in-person workshop.)</li>
 <li>Instructors will use <strong>Green check</strong> and <strong>Red
 X</strong> to poll the group at checkpoints along the way. <br/>
 <br/></li>
@@ -582,8 +556,8 @@ X</strong> to poll the group at checkpoints along the way. <br/>
 <h3>Exercise: Use Zoom non-verbals</h3>
 <ul>
 <li>Everyone use Zoom to raise your hand.
-<img src="images/Module00_zoom_raise_hand.png" width=50/> <br/>
-<br/></li>
+<img src="images/Module00_Introduction/zoom_raise_hand.png" width=50/>
+<br/> <br/></li>
 </ul>
 </div>
 <div id="exercise-using-zoom-breakout-rooms" class="section level3">
@@ -594,29 +568,29 @@ study) in a breakout room.</p>
 <li>Zoom: Click Breakout Rooms</li>
 <li>Find the room corresponding to the first letter of your first
 name</li>
-<li>Hover over the number to the right and click
-<strong>Join</strong>.</li>
+<li>Click <strong>Join</strong> (to the right of the room name).</li>
 <li>When you have completed introductions, you can leave the breakout
 room to rejoin the main room.</li>
 </ul>
-<p><img src="images/Module00_zoom_breakout_room.png"
-alt="Breakout rooms" /> <br/> <br/></p>
+<p><img src="images/Module00_Introduction/zoom_breakout_room.png" width="60%"/>
+<br/> <br/></p>
 </div>
 </div>
 <div id="section-1" class="section level2">
-<h2><img src="images/Module00_slack_logo.png" alt="Slack" width=120/></h2>
+<h2><img src="images/Module00_Introduction/slack_logo.png" alt="Slack" width=120/></h2>
 <ul>
 <li><strong>Slack</strong> can be used to communicate to the group or to
 individuals and has a few features/behaviors that we prefer over Zoom’s
 Chat functionality.</li>
 </ul>
 <div class="float">
-<img src="images/Module00_slack.png" alt="Posting messages to Slack" />
+<img src="images/Module00_Introduction/slack.png"
+alt="Posting messages to Slack" />
 <div class="figcaption">Posting messages to Slack</div>
 </div>
 <ul>
 <li>Slack messages will be posted to the
-<strong>2023-11-computational-foundations</strong> channel. Click on the
+<strong>2024-07-computational-foundations</strong> channel. Click on the
 channel in the left pane (1) to select this channel.</li>
 <li>You can type in the <strong>message field</strong> (2); click
 <strong>send</strong> (3) to post your message to everyone.</li>
@@ -643,15 +617,15 @@ trigger the message menu and clicking the <strong>speech bubble</strong>
 <tr class="header">
 <th></th>
 <th
-align="center"><img src="images/Module00_zoom_logo.png" alt="Zoom" width=120/></th>
-<th><img src="images/Module00_slack_logo.png" alt="Slack" width=120/></th>
+align="center"><img src="images/Module00_Introduction/zoom_logo.png" alt="Zoom" width=120/></th>
+<th><img src="images/Module00_Introduction/slack_logo.png" alt="Slack" width=120/></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td>“I have an urgent question”</td>
 <td
-align="center"><img src="images/Module00_zoom_raise_hand.png" width=50/></td>
+align="center"><img src="images/Module00_Introduction/zoom_raise_hand.png" width=50/></td>
 <td><strong>Post a question</strong></td>
 </tr>
 <tr class="even">
@@ -667,8 +641,9 @@ align="center"><img src="images/Module00_zoom_raise_hand.png" width=50/></td>
 <tr class="even">
 <td>Instructor check-in</td>
 <td
-align="center"><img src="images/Module00_zoom_green_check.png" width=50/>
--or- <img src="images/Module00_zoom_red_x.png" width=50/></td>
+align="center"><img src="images/Module00_Introduction/zoom_green_check.png" width=50/>
+-or-
+<img src="images/Module00_Introduction/zoom_red_x.png" width=50/></td>
 <td></td>
 </tr>
 <tr class="odd">
@@ -697,7 +672,7 @@ need clarification. <br/> <br/></li>
 <li>Slack</li>
 <li>Lesson plan web page</li>
 </ul>
-<p><img src="images/Module00_arranged_screens.png?"
+<p><img src="images/Module00_Introduction/arranged_screens.png?"
 alt="arranged screens" /> <br/> <br/></p>
 </div>
 </div>
@@ -711,7 +686,7 @@ alt="arranged screens" /> <br/> <br/></p>
 </div>
 <div id="thank-you-to-our-sponsorscontributors" class="section level1">
 <h1>Thank you to our sponsors/contributors</h1>
-<p><img src="images/Module00_sponsor_logos.png" /></p>
+<p><img src="images/Module00_Introduction/sponsor_logos.png" /></p>
 <div id="university-of-michigan-library" class="section level2">
 <h2><a href="https://www.lib.umich.edu/research-and-scholarship"
 target="_blank">University of Michigan Library</a></h2>
