--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
 
 <title>Computational Foundations Workshop</title>
 
-<script src="site_libs/header-attrs-2.21/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -38,7 +38,9 @@ Favicon from
 https://twemoji.twitter.com/
 https://favicon.io/emoji-favicons/computer/
 -->
-<meta name="google-site-verification" content="t-Wgs-RXt8xi94RSoFamxoD2P2h-Hh7M_t_iOuxFZUo" />
+<meta property="og:url" content="https://umich-brcf-bioinf.github.io/workshop-computational-foundations/2024-07-22/html/"/>
+<meta property="og:title" content="Computational Foundations"/>
+<meta property="og:description" content="A three-afternoon virtual workshop to show how to use the command line and R to navigate, analyze, and visualize data files." />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -343,8 +345,8 @@ target="_blank">Setup instructions</a></h4>
 target="_blank">Slack workspace</a></h4>
 <hr />
 </div>
-<div id="day-1-chris-travis" class="section level3">
-<h3>Day 1 (Chris &amp; Travis)</h3>
+<div id="day-1-chrismarci-travis" class="section level3">
+<h3>Day 1 (Chris/Marci &amp; Travis)</h3>
 <table>
 <thead>
 <tr class="header">
