--- a/html/workshop_setup/preregistration_info_header.html
+++ b/html/workshop_setup/preregistration_info_header.html
@@ -4,11 +4,11 @@ Favicon from
 https://twemoji.twitter.com/
 https://favicon.io/emoji-favicons/computer/
 -->
-<meta property="og:url" content="https://umich-brcf-bioinf.github.io/2023-07-31-umich-computational-foundations/html/workshop_setup/preregistration_info.html"/>
+<meta property="og:url" content="https://umich-brcf-bioinf.github.io/2024-07-22-umich-computational-foundations/html/workshop_setup/preregistration_info.html"/>
 <meta property="og:site_name" content="University of Michigan Bioinformatics Core"/>
-<meta property="og:title" content="UM BioinfCore Fall Workshop Series"/>
-<meta property="og:description" content="Two companion workshops in November."/>
-<meta name="twitter:label1" value="Computational Foundations (Intro to Bash/R)" />
-<meta name="twitter:data1" value="11/1-3 9-1 ET" />
+<meta property="og:title" content="UM BioinfCore Summer Workshop Series"/>
+<meta property="og:description" content="Two companion workshops in July and August."/>
+<meta name="twitter:label1" value="Computational Foundations" />
+<meta name="twitter:data1" value="July 22-24 1-5pm ET" />
 <meta name="twitter:label2" value="RNA-Seq Demystified" />
-<meta name="twitter:data2" value="11/15-17 9-1 ET" />
+<meta name="twitter:data2" value="August 5-7 1-5pm ET" />
