--- a/html/Module00_Introduction.html
+++ b/html/Module00_Introduction.html
@@ -14,7 +14,7 @@
 
 <title>Computational Foundations Workshop</title>
 
-<script src="site_libs/header-attrs-2.26/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -697,7 +697,8 @@ preserving, communicating, sharing, and creating the record of human
 knowledge.</p>
 </div>
 <div id="um-brcf-bioinformatics-core" class="section level2">
-<h2><a href="https://brcf.medicine.umich.edu/bioinformatics"
+<h2><a
+href="https://medresearch.umich.edu/office-research/about-office-research/biomedical-research-core-facilities/bioinformatics-core"
 target="_blank">UM BRCF Bioinformatics Core</a></h2>
 <ul>
 <li>The University of Michigan BRCF Bioinformatics Core is a team of
