Add Matt and Nick as helpers

--- a/html/Module99_Wrap_up.html
+++ b/html/Module99_Wrap_up.html
@@ -550,8 +550,8 @@ folks)</li>
 <h2>Thank you</h2>
 <p><img src="images/Module00_Introduction/sponsor_logos.png" /></p>
 </div>
-<div id="about-the-workshop-team" class="section level2">
-<h2>About the workshop team</h2>
+<div id="thanks-tofrom-the-workshop-team" class="section level2">
+<h2>Thanks to/from the workshop team</h2>
 <table>
 <colgroup>
 <col width="25%" />
@@ -566,29 +566,31 @@ src="images/Module00_Introduction/headshots/headshot_cgates.jpg" /></th>
 <th align="center"><img
 src="images/Module00_Introduction/headshots/headshot_mbradenb.jpg" /></th>
 <th align="center"><img
+src="images/Module00_Introduction/headshots/headshot_trsaari.jpg" /></th>
+<th align="center"><img
 src="images/Module00_Introduction/headshots/headshot_rcavalca.jpg" /></th>
-<th align="center"></th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
 <td align="center"><strong>Chris</strong></td>
 <td align="center"><strong>Marci</strong></td>
+<td align="center"><strong>Travis</strong></td>
 <td align="center"><strong>Raymond</strong></td>
-<td align="center"></td>
 </tr>
 <tr class="even">
 <td align="center"><img
-src="images/Module00_Introduction/headshots/headshot_trsaari.jpg" /></td>
-<td align="center"><img
 src="images/Module00_Introduction/headshots/headshot_damki.jpg" /></td>
-<td align="center"></td>
+<td align="center"><img
+src="images/Module00_Introduction/headshots/headshot_mkdohert.jpg" /></td>
+<td align="center"><img
+src="images/Module00_Introduction/headshots/headshot_ncarruth.jpg" /></td>
 <td align="center"></td>
 </tr>
 <tr class="odd">
-<td align="center"><strong>Travis</strong></td>
 <td align="center"><strong>Dana</strong></td>
-<td align="center"></td>
+<td align="center"><strong>Matt</strong></td>
+<td align="center"><strong>Nick</strong></td>
 <td align="center"></td>
 </tr>
 </tbody>
