Minor update to adv setup and wrap up

--- a/html/Module99_Wrap_up.html
+++ b/html/Module99_Wrap_up.html
@@ -451,10 +451,9 @@ scp -r YOUR_USERNAME@bfx-workshop01.med.umich.edu:&quot;CF*&quot; computational-
 <h3 id="how-could-i-install-this-software-on-my-workstationlaptop">How
 could I install this software on my workstation/laptop?</h3>
 <ul>
-<li>See <a
-href="workshop_setup/setup_instructions_advanced.html">Advanced setup
-instructions</a> for details on how to install programs on your own
-computer.</li>
+<li>See <a href="workshop_setup/setup_instructions_advanced.html"
+target="_blank">Advanced setup instructions</a> for details on how to
+install programs on your own computer.</li>
 </ul></li>
 </ul>
 </div>
@@ -500,6 +499,10 @@ target="_blank">Data visualization with ggplot2</a></li>
 class="section level3">
 <h3>Can you recommend other relevant workshops or turorials?</h3>
 <ul>
+<li>The <a
+href="https://medresearch.umich.edu/office-research/about-office-research/biomedical-research-core-facilities/bioinformatics-core/bioinformatics-workshops-training"
+target="_blank">University of Michigan Bioinformatics Core</a> hosts
+workshops through the year.</li>
 <li>Intro lessons and workshops in Bash / Git / R / Python :
 <ul>
 <li><a href="https://software-carpentry.org/lessons/"
