--- a/html/r-01-introduction.html
+++ b/html/r-01-introduction.html
@@ -13,7 +13,7 @@
 
 <title>Introducing R and RStudio</title>
 
-<script src="site_libs/header-attrs-2.24/header-attrs.js"></script>
+<script src="site_libs/header-attrs-2.27/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link href="site_libs/bootstrap-3.3.5/css/paper.min.css" rel="stylesheet" />
@@ -429,7 +429,7 @@ RStudio.</p>
 <div id="log-in-to-rstudio-server" class="section level1">
 <h1>Log in to RStudio Server</h1>
 <p>To get started, open a web browser and enter the following URL.</p>
-<pre><code>http://bfx-workshop01.med.umich.edu</code></pre>
+<pre><code>http://bfx-workshop02.med.umich.edu</code></pre>
 <p>You should now be looking at a page that will allow you to login to
 the RStudio server:</p>
 <p><img src="images/rstudio_login_screen.png" alt="rstudio default session" style="width: 1000px;"/></p>
@@ -560,10 +560,10 @@ shortcut:</p>
 <KBD>Ctrl</KBD>+<KBD>Enter</KBD>.</p>
 <pre class="r"><code>library(tidyverse)</code></pre>
 <pre><code>── Attaching core tidyverse packages ─────────────────────────────────────────────────── tidyverse 2.0.0 ──
-✔ dplyr     1.1.2     ✔ readr     2.1.4
-✔ forcats   1.0.0     ✔ stringr   1.5.0
-✔ ggplot2   3.4.3     ✔ tibble    3.2.1
-✔ lubridate 1.9.2     ✔ tidyr     1.3.0
+✔ dplyr     1.1.4     ✔ readr     2.1.5
+✔ forcats   1.0.0     ✔ stringr   1.5.1
+✔ ggplot2   3.5.1     ✔ tibble    3.2.1
+✔ lubridate 1.9.3     ✔ tidyr     1.3.1
 ✔ purrr     1.0.2     
 ── Conflicts ───────────────────────────────────────────────────────────────────── tidyverse_conflicts() ──
 ✖ dplyr::filter() masks stats::filter()
@@ -728,16 +728,16 @@ said before, <code>read_csv()</code> is a function and
 <code>'data/gapminder_1997.csv'</code> is an argument to that function.
 What happens if we just do:</p>
 <pre class="r"><code>read_csv()</code></pre>
-<pre><code>Error in vroom::vroom(file, delim = &quot;,&quot;, col_names = col_names, col_types = col_types, : argument &quot;file&quot; is missing, with no default</code></pre>
+<pre><code>Error in read_csv(): argument &quot;file&quot; is missing, with no default</code></pre>
 <p>We get an error in the Console pane. The key part of the message is
 “argument ‘file’ is missing, with no default”. In other words, this
 function needs to be told what to read because there is no default.</p>
 <p>Not every function needs arguments, but many do. Try the following
 functions:</p>
 <pre class="r"><code>Sys.Date()</code></pre>
-<pre><code>[1] &quot;2023-10-29&quot;</code></pre>
+<pre><code>[1] &quot;2024-10-16&quot;</code></pre>
 <pre class="r"><code>getwd()</code></pre>
-<pre><code>[1] &quot;/Users/rcavalca/Projects/workshop-computational-foundations/source&quot;</code></pre>
+<pre><code>[1] &quot;/Users/cgates/git/workshop-computational-foundations/source&quot;</code></pre>
 <pre class="r"><code>round(3.1415, 2)</code></pre>
 <pre><code>[1] 3.14</code></pre>
 <p>Notice that we threw in <code>round()</code> which actually takes two
